--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
     <scm>
         <url>https://github.com/buddycloud/buddycloud-server-java</url>
     </scm>
-    
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.withDependencies>jar-with-dependencies</project.build.withDependencies>
         <maven.checkstyle.plugin.version>2.13</maven.checkstyle.plugin.version>
         <checkstyle.config.location>src/main/resources/checkstyle.xml</checkstyle.config.location>
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.xbill</groupId>
@@ -163,141 +163,147 @@
         </pluginRepository>
     </pluginRepositories>
     <build>
-        <plugins>
-            <plugin>
-                <!-- Extended Maven antrun plugin -->
-                <!-- https://maven-antrun-extended-plugin.dev.java.net/ -->
-                <groupId>org.jvnet.maven-antrun-extended-plugin</groupId>
-                <artifactId>maven-antrun-extended-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>test-reports</id>
-                        <phase>test</phase>
-                        <configuration>
-                            <tasks unless="maven.test.skip">
-                                <junitreport todir="target/surefire-reports">
-                                    <fileset dir="target/surefire-reports">
-                                        <include name="**/*.xml" />
-                                    </fileset>
-                                    <report format="noframes"
-                                        todir="target/surefire-reports" />
-                                </junitreport>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.ant</groupId>
-                        <artifactId>ant-junit</artifactId>
-                        <version>1.8.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.ant</groupId>
-                        <artifactId>ant-trax</artifactId>
-                        <version>1.8.0</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <argLine>-Duser.timezone=UTC -XX:MaxPermSize=1024m -Xmx1024m</argLine>
-                    <skipTests>false</skipTests>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <forkMode>once</forkMode>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                    <useFile>false</useFile>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>org.buddycloud.channelserver.Main</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>${project.build.withDependencies}</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>jar-with-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.github.goldin</groupId>
-                <artifactId>copy-maven-plugin</artifactId>
-                <version>0.2.5</version>
-                <executions>
-                    <execution>
-                        <id>create-archive</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <resources>
-                                <resource>
-                                    <targetPath>${project.build.directory}</targetPath>
-                                    <file>target/${project.build.finalName}.jar</file>
-                                    <destFileName>${project.artifactId}.jar</destFileName>
-                                </resource>
-                                <resource>
-                                    <targetPath>${project.build.directory}</targetPath>
-                                    <file>${project.build.directory}/${project.build.finalName}-${project.build.withDependencies}.jar</file>
-                                    <destFileName>${project.artifactId}-${project.build.withDependencies}.jar</destFileName>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${maven.checkstyle.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>validate</id>
-                        <phase>validate</phase>
-                        <configuration>
-                            <configLocation>${checkstyle.config.location}</configLocation>
-                            <encoding>UTF-8</encoding>
-                            <consoleOutput>false</consoleOutput>
-                            <failOnViolation>true</failOnViolation>
-                            <failsOnError>true</failsOnError>
-                            <linkXRef>false</linkXRef>
-                        </configuration>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <!-- Extended Maven antrun plugin -->
+                    <!-- https://maven-antrun-extended-plugin.dev.java.net/ -->
+                    <groupId>org.jvnet.maven-antrun-extended-plugin</groupId>
+                    <artifactId>maven-antrun-extended-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>test-reports</id>
+                            <phase>test</phase>
+                            <configuration>
+                                <tasks unless="maven.test.skip">
+                                    <junitreport
+                                        todir="target/surefire-reports">
+                                        <fileset
+                                            dir="target/surefire-reports">
+                                            <include name="**/*.xml" />
+                                        </fileset>
+                                        <report format="noframes"
+                                            todir="target/surefire-reports" />
+                                    </junitreport>
+                                </tasks>
+                            </configuration>
+                            <goals>
+                                <goal>run</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.ant</groupId>
+                            <artifactId>ant-junit</artifactId>
+                            <version>1.8.0</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.apache.ant</groupId>
+                            <artifactId>ant-trax</artifactId>
+                            <version>1.8.0</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <argLine>-Duser.timezone=UTC -XX:MaxPermSize=1024m -Xmx1024m</argLine>
+                        <skipTests>false</skipTests>
+                        <testFailureIgnore>true</testFailureIgnore>
+                        <forkMode>once</forkMode>
+                        <includes>
+                            <include>**/*Test.java</include>
+                        </includes>
+                        <useFile>false</useFile>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.5.1</version>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <mainClass>org.buddycloud.channelserver.Main</mainClass>
+                            </manifest>
+                        </archive>
+                        <descriptorRefs>
+                            <descriptorRef>${project.build.withDependencies}</descriptorRef>
+                        </descriptorRefs>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>jar-with-dependencies</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.goldin</groupId>
+                    <artifactId>copy-maven-plugin</artifactId>
+                    <version>0.2.5</version>
+                    <executions>
+                        <execution>
+                            <id>create-archive</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>copy</goal>
+                            </goals>
+                            <configuration>
+                                <resources>
+                                    <resource>
+                                        <targetPath>${project.build.directory}</targetPath>
+                                        <file>target/${project.build.finalName}.jar</file>
+                                        <destFileName>${project.artifactId}.jar</destFileName>
+                                    </resource>
+                                    <resource>
+                                        <targetPath>${project.build.directory}</targetPath>
+                                        <file>${project.build.directory}/${project.build.finalName}-${project.build.withDependencies}.jar</file>
+                                        <destFileName>${project.artifactId}-${project.build.withDependencies}.jar</destFileName>
+                                    </resource>
+                                </resources>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <configuration>
+                        <failOnViolation>true</failOnViolation>
+                        <failsOnError>true</failsOnError>
+                        <encoding>UTF-8</encoding>
+                        <consoleOutput>false</consoleOutput>
+                        <linkXRef>false</linkXRef>
+                        <includes>**\/*.java</includes>
+                        <includeResources>false</includeResources>
+                    </configuration>
+                    <version>${maven.checkstyle.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>validate</id>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
+
 </project>
