--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <checkstyle.version>2.13</checkstyle.version>
         <checkstyle.config.location>src/main/resources/checkstyle.xml</checkstyle.config.location>
         <cobertura.version>2.6</cobertura.version>
+        <surefire.reportplugin.version>2.5</surefire.reportplugin.version>
     </properties>
 
     <dependencies>
@@ -212,7 +213,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.5</version>
+                    <version>${surefire.reportplugin.version}</version>
                     <configuration>
                         <argLine>-Duser.timezone=UTC -XX:MaxPermSize=1024m -Xmx1024m</argLine>
                         <skipTests>false</skipTests>
@@ -262,7 +263,7 @@
                         <!-- Set the property samedir so that the suppression file can be resolved by both maven and eclipse-cs -->
                         <propertyExpansion>samedir=${basedir}/src/main/resources</propertyExpansion>
                         <failOnViolation>true</failOnViolation>
-                        <failsOnError>true</failsOnError>
+                        <failOnError>true</failOnError>
                         <encoding>UTF-8</encoding>
                         <consoleOutput>false</consoleOutput>
                         <linkXRef>false</linkXRef>
@@ -302,7 +303,6 @@
                     <version>2.5.5</version>
                     <configuration>
                         <effort>Max</effort>
-                        <threshold>High</threshold>
                         <xmlOutput>true</xmlOutput>
                     </configuration>
                     <executions>
@@ -324,11 +324,18 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>${findbugs.version}</version>
+                <configuration>
+                    <effort>Max</effort>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${checkstyle.version}</version>
+                <configuration>
+                    <!-- Set the property samedir so that the suppression file can be resolved by both maven and eclipse-cs -->
+                    <propertyExpansion>samedir=${basedir}/src/main/resources</propertyExpansion>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
